--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -4,11 +4,16 @@ $color3: #fff;
 $color4: #5bacc3;
 $color5: #fff0ed;
 $color6: #909090;
+
 $h1-h2: 3.7rem;
 $h3: 2.2rem;
 $h3card: 2rem;
 $p1: 1rem;
 $p2: 1.3rem;
 $p3: 2.8rem;
-$min-width: 300px;
+
+$min-width: 320px;
 $max-width: 1440px;
+
+$tablet: 768px;
+$desktop: 1024px;
