--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -1,3 +1,5 @@
+@use "./variables" as *;
+
 @mixin offset-border($offset, $thickness, $color) {
   // inset: 0;
   border: $thickness solid $color;
@@ -17,4 +19,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+// Media Query Mixins
+@mixin tablet {
+  @media (min-width: $tablet) {
+    @content;
+  }
+}
+@mixin desktop {
+  @media (min-width: $desktop) {
+    @content;
+  }
 }
