--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -2,6 +2,7 @@
 @use "./partials/variables" as *;
 @use "./partials/mixins" as *;
 @use "./partials/keyframes" as *;
+@use "./partials/fonts" as *;
 
 /* header styles */
 .header {
