--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -2,6 +2,7 @@
 @use "./partials/mixins" as *;
 @use "./partials/variables" as *;
 @use "./partials/keyframes" as *;
+@use "./partials/fonts" as *;
 
 /* Header Styles */
 .header-menu {
@@ -9,21 +10,12 @@
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 36rem;
+  min-height: 36rem;
   display: flex;
 }
-.header-links {
-  &__list,
-  &__list-item {
-    width: 100%;
-    background-color: $color1;
-    color: $color3;
-    text-align: center;
-  }
-}
 .header-menu__title-box {
-  height: 12rem;
-  width: 18rem;
+  height: 8rem;
+  width: 12rem;
   background-color: $color1;
   margin: auto;
   position: relative;
@@ -31,6 +23,10 @@
   align-items: center;
   justify-content: center;
   animation: slide-in-side 1.5s;
+  @include tablet {
+    height: 12rem;
+    width: 18rem;
+  }
 }
 .title-box {
   &__border {
@@ -39,22 +35,48 @@
   }
   &__title {
     color: $color3;
-    font-weight: 300;
     opacity: 0;
-    transform: translateX(-0.1em) translateY(-0.1em);
     animation: lettersAppear 1.5s ease-in-out 1s;
     animation-fill-mode: forwards;
+    font-size: $p3;
+    @include tablet {
+      font-size: $h1-h2;
+    }
   }
 }
 .header-links {
   &__list {
     padding: 1em;
+    background-color: $color1;
+    line-height: 0.5;
+    @include tablet {
+      text-align: center;
+      width: 100%;
+      padding: 2em 1em;
+    }
   }
   &__list-item {
-    display: inline;
-    padding: 0 0.8em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: $color3;
+    padding: 0.5em 1em;
     border-left: 0.2em solid $color4;
+    border-right: 0.2em solid $color4;
     text-transform: uppercase;
+    font-size: 1.2em;
+    @include tablet {
+      display: inline;
+      border-right: none;
+      padding: 0 1em;
+    }
+  }
+  &__link {
+    font-weight: 300;
+    @include tablet {
+      margin-right: 0.4em;
+    }
+    // margin-right: 0.4em;
   }
 }
 
@@ -68,11 +90,20 @@
     margin: auto;
   }
   .first-title {
-    padding-top: 0.2em;
+    line-height: 1;
+    padding-top: 0.4em;
     padding-bottom: 0.3em;
+    @include tablet {
+      padding-top: 0.5em;
+      padding-bottom: 0.8em;
+    }
   }
   .second-title {
-    padding-bottom: 0.2em;
+    line-height: 1;
+    padding-bottom: 0.3em;
+    @include tablet {
+      padding-bottom: 0.2em;
+    }
   }
 }
 .main__price {
@@ -81,9 +112,12 @@
 }
 .main {
   .main__description {
-    width: 30%;
+    width: 60%;
     margin: auto;
     min-width: $min-width;
+    @include tablet {
+      width: 30%;
+    }
   }
 }
 .main__section {
@@ -113,30 +147,4 @@
 }
 .footer__icon {
   margin-bottom: 2em;
-}
-
-/* responsive styles for smaller screen sizes */
-@media (max-width: 960px) {
-}
-@media (max-width: 480px) {
-  .header-menu__title-box {
-    height: 8rem;
-    width: 12rem;
-  }
-  .title-box__title {
-    font-size: $p3;
-  }
-  .main__description {
-    width: 60%;
-  }
-  .main {
-    .first-title {
-      line-height: 1;
-      padding-top: 0.4em;
-    }
-    .second-title {
-      line-height: 1;
-      padding-bottom: 0.3em;
-    }
-  }
 }
