--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -17,18 +17,33 @@
   align-items: center;
   justify-content: space-between;
   gap: 2em;
-  padding: 2em 12em 2em 8em;
+  padding: 2em;
+  width: 100%;
   overflow: hidden;
+  @include tablet {
+    padding: 2em 6em 2em 5em;
+  }
+  @include desktop {
+    padding: 2em 12em 2em 8em;
+  }
 }
-.description__text {
-  margin-top: 0.7em;
-  margin-bottom: -0.3em;
+.description {
+  &__title {
+    line-height: 1;
+  }
+  &__text {
+    margin-top: 0.7em;
+    margin-bottom: -0.3em;
+  }
 }
 .section__description {
   max-width: 22em;
 }
 .section__img {
-  height: 32rem;
+  height: 25em;
+  @include tablet {
+    height: 32rem;
+  }
 }
 /* main section styles */
 .main__our-products {
@@ -46,12 +61,18 @@
     margin: 1em 3em;
     box-shadow: 0 5px 9px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    width: 20em;
+    width: 15em;
+    @include tablet {
+      width: 20em;
+    }
   }
 }
 .product-card {
   &__container-top {
-    padding: 1em 2em 1em;
+    padding: 1em;
+    @include tablet {
+      padding: 1em 2em;
+    }
   }
   &__container-bottom {
     padding: 1em 1em;
@@ -92,41 +113,85 @@
   padding-right: 2em;
 }
 .main__discount-section {
-  height: 64rem;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  margin: 0;
   @include flex-column-center();
+  @include tablet {
+    min-height: 64rem;
+  }
 }
 .discount-section__top-section {
-  height: 32rem;
-  padding-top: 7em;
-  width: 80%;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
+  height: auto;
+  padding-top: 2em;
+  @include desktop {
+    height: 32rem;
+    width: 80%;
+    padding-top: 7em;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 .top-section__section1 {
-  width: 37%;
+  margin-bottom: 5em;
+  width: 60%;
+  position: relative;
+  @include flex-column-center();
+  @include desktop {
+    width: 37%;
+  }
 }
 .section1 {
   &__title {
-    margin-bottom: 0.4em;
+    text-align: center;
+    margin-bottom: 0.3em;
+    line-height: 1;
+    @include tablet {
+      margin-bottom: 0.4em;
+    }
+  }
+  &__description {
+    text-align: center;
+    @include desktop {
+      text-align: left;
+    }
   }
   &__images {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding-top: 1.5em;
     padding-bottom: 1.8em;
+  }
+  &__button {
+    @include desktop {
+      position: absolute;
+      left: 0;
+    }
   }
 }
 .images__icon {
   width: 2.4em;
 }
 .top-section__section2 {
-  width: 24em;
+  width: 80%;
+  height: auto;
+  position: relative;
+  margin-bottom: 1em;
   padding: 4em 1.2em;
   background-image: url(../Assets/coldbrewbackground.png);
   background-size: cover;
   @include flex-center();
-  position: relative;
+  @include tablet {
+    width: 24em;
+    height: 24em;
+  }
 }
 .section2 {
   &__img {
@@ -134,27 +199,36 @@
     left: -0.9em;
     bottom: 0.9em;
     right: 0.9em;
+    // width: 70%;
+    // height: auto;
+    transform: translateX(-5px);
   }
   &__border {
     @include offset-border(0.9em, 5px, $color4);
   }
 }
 .discount-section__bottom-section {
-  height: 32rem;
+  min-height: 32rem;
   width: 80%;
   display: flex;
+  margin-top: -0.5em;
 }
 .bottom-section__description {
   background-color: $color1;
   color: $color3;
   font-size: $p3;
   font-weight: 200;
-  padding: 0.8em 1.2em;
+  padding: 0.8em;
   text-align: center;
   margin: auto;
-  min-width: $min-width;
+  // min-width: $min-width;
   width: 100%;
   animation: colorChange 2.5s linear infinite;
+  align-items: left;
+  align-content: left;
+  @include tablet {
+    padding: 0.8em 1.2em;
+  }
 }
 /* footer styles */
 .footer {
@@ -164,6 +238,9 @@
   justify-content: space-around;
   position: relative;
   overflow: hidden;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  flex-flow: wrap;
 
   &__background-img1,
   &__background-img2 {
@@ -181,8 +258,13 @@
   }
   &__section {
     display: inline-block;
-    margin: 4em 2em;
-    text-align: left;
+    margin: 1em;
+    padding: 0;
+    text-align: center;
+    @include tablet {
+      margin: 4em 2em;
+      text-align: left;
+    }
   }
   .second-title {
     margin-bottom: 0.5em;
@@ -223,81 +305,9 @@ button {
 }
 .social__icon {
   transition: 1s;
+  width: 3em;
   &:hover {
     box-shadow: 1px 1px 6px $color4, 2px 2px 7px $color4, -2px -2px 8px $color4,
       inset 1px 1px 5px $color4, inset -1px -1px 6px $color4;
-  }
-}
-/* responsive styles for smaller screen sizes */
-@media (max-width: 960px) {
-  .header__section {
-    padding: 2em;
-  }
-  .section__img {
-    height: 25em;
-  }
-  .main__discount-section {
-    height: auto;
-  }
-  .discount-section__top-section {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    padding-top: 2em;
-  }
-  .top-section__section1 {
-    margin-bottom: 6em;
-    width: 60%;
-    @include flex-column-center();
-
-    .section1__title {
-      text-align: center;
-      margin-bottom: 0.3em;
-      line-height: 1;
-    }
-    .section1__description {
-      text-align: center;
-    }
-  }
-  .section1__images {
-    width: 100%;
-  }
-  .footer {
-    display: flex;
-    flex-flow: wrap;
-
-    &__section,
-    p {
-      margin: 1em;
-      padding: 0;
-      text-align: center;
-    }
-  }
-}
-@media (max-width: 480px) {
-  .our-products__product-cards .product-card {
-    width: 17em;
-  }
-  .top-section__section1 {
-    margin-bottom: 4em;
-  }
-  .top-section__section2 {
-    width: 80%;
-    height: auto;
-    position: relative;
-    margin-bottom: 1em;
-
-    .section2__img {
-      width: 70%;
-      height: auto;
-      transform: translateX(-5px);
-    }
-  }
-  .footer {
-    padding-top: 2em;
-    padding-bottom: 2em;
-  }
-  .footer__section {
-    margin: 0;
   }
 }
