--- a/scss/menu.css
+++ b/scss/menu.css
@@ -210,7 +210,7 @@ li {
 
 /* Header Styles */
 .header-menu {
-  background-image: url(../Assets/coffee-circle.jpg);
+  background-image: url(../Assets/Images/coffee-circle.jpg);
   background-size: cover;
   background-position: center;
   width: 100%;
