--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -6,7 +6,7 @@
 
 /* Header Styles */
 .header-menu {
-  background-image: url(../Assets/coffee-circle.jpg);
+  background-image: url(../Assets/Images/coffee-circle.jpg);
   background-size: cover;
   background-position: center;
   width: 100%;
