Removed any unnecesary commented out code or redundant comments

--- a/scss/partials/_fonts.scss
+++ b/scss/partials/_fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "Open Sans";
   src: url("../../Assets/Fonts/Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf");
-  font-weight: 300 800; // This covers Light (300) to ExtraBold (800)
-  font-stretch: 75% 100%; // This covers Condensed to Normal width
+  font-weight: 300 800;
+  font-stretch: 75% 100%;
   font-style: normal;
 }
 
