--- a/scss/landing.css
+++ b/scss/landing.css
@@ -81,7 +81,7 @@ body {
   font-weight: 400;
   margin: auto;
   width: 100%;
-  max-width: 1440px;
+  max-width: 1480px;
   min-width: 340px;
 }
 
@@ -209,6 +209,10 @@ li {
 }
 
 /* header styles */
+html {
+  background-color: #fff0ed;
+}
+
 .header {
   margin: 0;
 }
